[gd_scene load_steps=5 format=3 uid="uid://lw0pg0r1fgef"]

[ext_resource type="Texture2D" uid="uid://cvg8f8fhin2kk" path="res://assets/images/cards/Back.png" id="1_bhgyf"]
[ext_resource type="Script" uid="uid://lrfh7fp78mnn" path="res://player.gd" id="1_qrs3f"]

[sub_resource type="LabelSettings" id="LabelSettings_nqwiu"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_dusqc"]
font_size = 42

[node name="Player" type="Control" groups=["Player"]]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_qrs3f")

[node name="TurnIndicator" type="Polygon2D" parent="."]
position = Vector2(1, 0)
scale = Vector2(0.9975, 2.96)
color = Color(0.619608, 0.784314, 0.486275, 1)
polygon = PackedVector2Array(0, 0, 42.1053, 0, 60.1504, 34.4595, 42.1053, 64.8649, 0, 64.8649, 23.0576, 34.1216)
uv = PackedVector2Array(0, 33)

[node name="CardSprite" type="Sprite2D" parent="."]
position = Vector2(195, 96)
texture = ExtResource("1_bhgyf")

[node name="AIWaitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 338.0
offset_top = -7.0
offset_right = 772.0
offset_bottom = 163.0
theme_override_constants/separation = 10

[node name="PlayerName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player name"
label_settings = SubResource("LabelSettings_nqwiu")

[node name="EyesCount" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "3 eyes, 3 visible"
label_settings = SubResource("LabelSettings_dusqc")
